--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -451,7 +451,7 @@
     </div>
     <!-- ❌ تمت إزالة خانة km 25 بالكامل -->
     <div class="col-6 col-md-2 d-grid">
-<button type="button" id="homeUseGPS" class="btn btn-outline-secondary" aria-label="استخدم موقعي" title="استخدم موقعي">📍</button>
+<button type="button" id="homeUseGPS" class="btn btn-outline-secondary" aria-label="استخدم موقعي" title="استخدم موقعي"></button>
 <button type="button" id="homeClearGPS" class="btn btn-link btn-sm">إلغاء</button>
 
     </div>
