--- a/app/templates/items_detail.html
+++ b/app/templates/items_detail.html
@@ -291,7 +291,7 @@
 <div class="modal fade" id="reportModal" tabindex="-1" aria-labelledby="reportLabel" aria-hidden="true" dir="rtl">
   <div class="modal-dialog">
     <div class="modal-content">
-      <form method="post" action="/reports/new" id="reportForm">
+<form method="post" action="/reports" id="reportForm">
         <div class="modal-header">
           <h5 class="modal-title" id="reportLabel">🚩 الإبلاغ عن الصورة/المنشور</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="إغلاق"></button>
